added index.html to path

--- a/directory_generator/template.html.erb
+++ b/directory_generator/template.html.erb
@@ -13,7 +13,7 @@
   <h1><%= lab_name %></h1>
   <ul id="students">
     <% people.each do |person| %>
-      <li class="student"><a href="<%= person[:formatted_name] %>/"><%= person[:name] %></a></li>
+      <li class="student"><a href="<%= person[:formatted_name] %>/index.html"><%= person[:name] %></a></li>
     <% end %>
   </ul>
 
